added readme for platform

--- a/platform/inference/examples/single-node/vllm_api_calls.ipynb
+++ b/platform/inference/examples/single-node/vllm_api_calls.ipynb
@@ -25,7 +25,7 @@
     "import json\n",
     "\n",
     "# Base URL for the FastAPI server\n",
-    "BASE_URL = \"http://localhost:7500\"\n",
+    "BASE_URL = \"http://localhost:8091\"\n",
     "\n",
     "# Define the model name and HF token to be used in the requests\n",
     "MODEL_NAME = \"HuggingFaceTB/SmolLM-135M\"\n",
@@ -44,10 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "66e2c4ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status Code: 200\n",
+      "Response: {'message': 'vLLM container started and attached to platform network successfully', 'container_id': '51865fd7967bcda6d5f5b2e5daa82a8a4dd1af42c021b0466629129bd4e7e722'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Prepare the payload with extra command arguments\n",
     "payload = {\n",
@@ -75,10 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4a30c4f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status Code: 200\n",
+      "Response: {'container_id': '51865fd7967bcda6d5f5b2e5daa82a8a4dd1af42c021b0466629129bd4e7e722', 'status': 'running'}\n"
+     ]
+    }
+   ],
    "source": [
     "status_url = f\"{BASE_URL}/status-vllm\"\n",
     "params = {\"model_name\": MODEL_NAME}\n",
@@ -100,10 +118,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cf8fbe91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status Code: 200\n",
+      "Response: {'message': 'vLLM container SmolLM-135M stopped and removed successfully'}\n"
+     ]
+    }
+   ],
    "source": [
     "stop_url = f\"{BASE_URL}/stop-vllm\"\n",
     "params = {\"model_name\": MODEL_NAME}\n",
@@ -121,8 +148,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.x"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
