--- a/platform/testing/promptfoo-api-call.ipynb
+++ b/platform/testing/promptfoo-api-call.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "imports",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "setup-functions",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "generate-config-cell",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Response: {'message': 'Error pulling model', 'error': '/bin/sh: 1: docker: not found\\n'}\n",
+      "Response: {'message': 'Error pulling model', 'error': 'the input device is not a TTY\\n'}\n",
       "Config file generated successfully!\n"
      ]
     }
